--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta  name="viewport" content="width=device-width,initial-scale=1">
   <title>Гостиница Славянская</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   <header class="header wrapper">
     <div class="header__top">
       <address class="address">
-        <p><span>г. Славянск-на-Кубани, ул. Красная, 10</span></p>
-        <a href="Tel:+78614640329">8(86146) 4-03-29</a>
+        <p class="address__text address__text--place"><span>г. Славянск-на-Кубани, ул. Красная, 10</span></p>
+        <a class="address__text address__text--phone" href="Tel:+78614640329">8(86146) 4-03-29</a>
       </address>
       <div class="logo">
         <img src="img/logo.png" alt="Logo" width="430" height="82">
@@ -28,7 +29,7 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
+            <a href="#" class="menu__link menu__link--active">Главная</a>
           </li>
           <li class="menu__item">
             <a href="#" class="menu__link">Номера</a>
@@ -56,9 +57,20 @@
   
   <main>
     <section class="promo">
-      <div class="slider">
-        
+      <div class="swiper-container promo__slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="promo__img" src="img/slide-1.jpg" alt="Гостиница Славянская" width="1900" height="653">
+          </div>
+          <div class="swiper-slide">
+            <img class="promo__img" src="img/slide-2.jpg" alt="Гостиница Славянская" width="1900" height="653">
+          </div>
+          <div class="swiper-slide">
+            <img class="promo__img" src="img/slide-3.jpg" alt="Гостиница Славянская" width="1900" height="653">
+          </div>
+        </div>
       </div>
+      <div class="swiper-pagination promo__pagination"></div>
       
       <div class="promo__title">
         <h1 class="promo__h1">Добро пожаловать в гостиницу<span>Славянская</span></h1>
@@ -70,23 +82,29 @@
     <section class="booking-form wrapper">
       <form action="#" class="booking" method="get">
         <div class="booking__line">
-          <input type="date" class="booking__date" placeholder="Дата прибытия">
-          <input type="date" class="booking__date" placeholder="Дата отбытия">
-          <select name="night" id="night" class="booking__select" placeholder="Количество ночей">
+          <div class="booking__date-wrap">
+            <input class="booking__date" name="away" type="text" placeholder="Дата прибытия" required>
+          </div>
+          <div class="booking__date-wrap">
+            <input class="booking__date" name="come" type="text" placeholder="Дата отбытия" required>
+          </div>
+          <select name="night" id="night" class="booking__select" required>
+            <option disabled selected>Количество ночей</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
-          <select name="guest" id="guest" class="booking__select" placeholder="Количество гостей">
+          <select name="guest" id="guest" class="booking__select" required>
+            <option disabled selected>Количество гостей</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
         </div>
         <div class="booking__line">
-          <input type="email" class="booking__input" placeholder="E-mail">
-          <input type="email" class="booking__input" placeholder="Дата отбытия">
-          <button type="submit" class="booking__btn">Забронировать номер</button>
+          <input type="email" class="booking__text" placeholder="E-mail">
+          <input type="text" class="booking__text" placeholder="Дата отбытия">
+          <button type="submit" name="book" class="booking__btn">Забронировать номер</button>
         </div>
       </form>
     </section>
@@ -166,29 +184,67 @@
         <img src="img/logo-vertical.png" alt="Logo" width="255" height="82">
       </div>
       <address class="address">
-        <p>г. Славянск-на-Кубани, ул. Красная, 10</p>
-        <a href="Tel:+78614640329">8(86146) 4-03-29</a>
+        <p class="address__text address__text--place">г. Славянск-на-Кубани, ул. Красная, 10</p>
+        <a class="address__text address__text--phone" href="Tel:+78614640329">8(86146) 4-03-29</a>
       </address>
       <ul class="social">
         <li class="social__item">
-          <a href="#" class="social__link">&#xf0d2;</a>
+          <a href="#" class="social__link">
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" enable-background="new 0 0 24 24">
+                <path d="M12,2C6.5,2,2,6.5,2,12c0,5.5,4.5,10,10,10s10-4.5,10-10C22,6.5,17.5,2,12,2z M13.2,16.8c-1.5,0-2.3-1.3-2.3-1.3 c0,1.1-1.8,4.5-2.3,5.5c0,0-0.1,0.1-0.2-0.1c0-0.7,0.2-2.6,1.2-7.1c0.2-1.8-0.1-2.4-0.1-3.1c0-1.7,0.9-2,1.4-2 c0.7,0,1.7,0.3,1.7,1.4c0,1.3-1.1,1.7-1.1,1.7s-0.1,0.3-0.2,1.3c-0.1,0.9,0.3,2,1.8,2c2.5,0,2.9-3.4,2.9-4.4c0-1.3-1-3.9-3.9-3.9 c-4,0-4.6,3.5-4.6,4.5c0,0.4,0.1,1.1,0.2,1.4c0.7,0.1,0.7,1.1,0.4,1.4c-0.4,0.3-2.2,0.7-2.2-3.3c0-3.8,3.4-5.8,6.4-5.8 c2.8,0,5.9,2,5.9,5.7C18.1,14.2,15.7,16.8,13.2,16.8z"/>
+            </svg>
+          </a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link">&#xf082;</a>
+          <a href="#" class="social__link">
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90px" height="90px" viewBox="0 0 90 90" style="enable-background:new 0 0 90 90;" xml:space="preserve">
+              <g><path id="Facebook__x28_alt_x29_" d="M90,15.001C90,7.119,82.884,0,75,0H15C7.116,0,0,7.119,0,15.001v59.998		C0,82.881,7.116,90,15.001,90H45V56H34V41h11v-.844C45,25.077,52.568,16,61.875,16H74v15H61.875C60.548,31,59,32.611,59,35.024V41	h15v15H59v34h16c7.884,0,15-7.119,15-15.001V15.001z"/></g>
+            </svg>
+          </a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link">&#xf081;</a>
+          <a href="#" class="social__link">
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="510px" height="510px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
+	            <g id="post-twitter"><path d="M459,0H51C22.95,0,0,22.95,0,51v408c0,28.05,22.95,51,51,51h408c28.05,0,51-22.95,51-51V51C510,22.95,487.05,0,459,0z M400.35,186.15c-2.55,117.3-76.5,198.9-188.7,204C165.75,392.7,132.6,377.4,102,359.55c33.15,5.101,76.5-7.649,99.45-28.05 c-33.15-2.55-53.55-20.4-63.75-48.45c10.2,2.55,20.4,0,28.05,0c-30.6-10.2-51-28.05-53.55-68.85c7.65,5.1,17.85,7.65,28.05,7.65 c-22.95-12.75-38.25-61.2-20.4-91.8c33.15,35.7,73.95,66.3,140.25,71.4c-17.85-71.4,79.051-109.65,117.301-61.2 c17.85-2.55,30.6-10.2,43.35-15.3c-5.1,17.85-15.3,28.05-28.05,38.25c12.75-2.55,25.5-5.1,35.7-10.2 C425.85,165.75,413.1,175.95,400.35,186.15z"/></g>
+            </svg>
+          </a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link">&#xf166;</a>
+          <a href="#" class="social__link">
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18.136 18.136" style="enable-background:new 0 0 18.136 18.136;" xml:space="preserve">
+              <g><path  d="M16.281,0.001H1.855C0.831,0.001,0,0.83,0,1.855v14.426c0,1.025,0.831,1.854,1.855,1.854h14.426 c1.024,0,1.855-0.828,1.855-1.854V1.855C18.136,0.83,17.306,0.001,16.281,0.001z M10.447,3.063h0.883v2.785 c0,0.535,0.017,0.519,0.035,0.586c0.019,0.071,0.083,0.238,0.29,0.238c0.22,0,0.281-0.176,0.298-0.251 c0.014-0.065,0.03-0.052,0.03-0.61V3.063h0.882v4.18h-0.894l0.011-0.211L11.71,6.919c-0.069,0.14-0.149,0.24-0.247,0.31 c-0.099,0.069-0.21,0.104-0.342,0.104c-0.152,0-0.276-0.033-0.37-0.098c-0.092-0.063-0.156-0.141-0.198-0.24 c-0.046-0.11-0.075-0.229-0.086-0.346c-0.013-0.135-0.02-0.414-0.02-0.83V3.063L10.447,3.063z M7.379,4.801 c0-0.436,0.037-0.773,0.107-1.012C7.552,3.568,7.669,3.394,7.844,3.26c0.178-0.139,0.413-0.208,0.699-0.208 c0.244,0,0.453,0.048,0.624,0.138c0.166,0.088,0.294,0.203,0.381,0.338C9.637,3.67,9.699,3.815,9.732,3.961 c0.034,0.152,0.051,0.398,0.051,0.73v0.736c0,0.432-0.017,0.747-0.048,0.941C9.705,6.546,9.639,6.716,9.54,6.872 		C9.441,7.025,9.318,7.139,9.161,7.213C8.999,7.29,8.808,7.33,8.594,7.33c-0.244,0-0.451-0.034-0.617-0.104 	C7.823,7.164,7.705,7.074,7.623,6.953C7.539,6.827,7.477,6.672,7.44,6.492C7.4,6.298,7.38,5.996,7.38,5.593L7.379,4.801z M5.314,1.574l0.718,2.311c0.125-0.604,0.367-1.44,0.559-2.311h0.651L6.404,4.871L6.398,4.897v2.344H5.635V4.897L5.629,4.872 L4.663,1.574H5.314z M15.708,14.501c-0.114,1.04-1.037,1.892-2.072,1.962c-3.048,0.131-6.087,0.131-9.134,0 c-1.036-0.07-1.958-0.922-2.073-1.962c-0.113-1.646-0.113-3.263,0-4.907c0.114-1.04,1.037-1.89,2.073-1.963 c3.047-0.13,6.086-0.13,9.134,0c1.036,0.073,1.958,0.923,2.072,1.963C15.822,11.238,15.822,12.855,15.708,14.501z M8.581,6.83 c0.128,0,0.228-0.077,0.273-0.21C8.875,6.559,8.9,6.443,8.9,6.127V4.316c0-0.366-0.021-0.484-0.043-0.551 C8.812,3.629,8.713,3.55,8.584,3.55c-0.127,0-0.227,0.076-0.274,0.211C8.286,3.826,8.262,3.947,8.262,4.316v1.761 	c0,0.346,0.025,0.465,0.047,0.532C8.355,6.749,8.454,6.83,8.581,6.83z M3.617,9.91h0.72H4.48v0.147v4.704h0.904v-4.704V9.91h0.142 h0.723V8.99H3.617V9.91z M7.892,13.105c0,0.521-0.015,0.65-0.027,0.705c-0.031,0.135-0.139,0.217-0.291,0.217 c-0.145,0-0.25-0.078-0.284-0.207c-0.015-0.055-0.031-0.184-0.031-0.68v-2.757H6.403v3.004c0,0.396,0.006,0.66,0.018,0.79 	c0.012,0.119,0.043,0.237,0.091,0.348c0.043,0.1,0.108,0.177,0.199,0.236c0.088,0.061,0.205,0.09,0.346,0.09 c0.121,0,0.226-0.031,0.318-0.094c0.095-0.064,0.178-0.166,0.246-0.301l0.271,0.066L7.88,14.766h0.868v-4.383H7.893L7.892,13.105z M11.678,10.605c-0.047-0.093-0.115-0.162-0.205-0.215c-0.093-0.053-0.207-0.078-0.338-0.078c-0.11,0-0.209,0.027-0.304,0.086 c-0.097,0.062-0.188,0.153-0.27,0.281L10.3,11.082v-0.486V8.991H9.444v5.771h0.808l0.05-0.257l0.07-0.358l0.19,0.308 		c0.084,0.138,0.177,0.239,0.275,0.306c0.093,0.062,0.19,0.094,0.296,0.094c0.15,0,0.276-0.053,0.386-0.156 	c0.115-0.112,0.186-0.237,0.217-0.389c0.034-0.168,0.051-0.434,0.051-0.416v-2.291c0,0.01,0.034-0.228-0.017-0.701 C11.761,10.803,11.73,10.706,11.678,10.605z M10.933,13.148c0,0.41-0.021,0.535-0.038,0.6c-0.04,0.141-0.141,0.223-0.277,0.223 c-0.132,0-0.233-0.078-0.275-0.215c-0.02-0.062-0.042-0.184-0.042-0.559v-1.161c0-0.39,0.02-0.507,0.038-0.563 c0.039-0.129,0.141-0.207,0.272-0.207c0.135,0,0.237,0.082,0.28,0.221c0.019,0.061,0.044,0.183,0.044,0.551v1.111L10.933,13.148 L10.933,13.148z M13.272,12.702h0.143h1.335v-0.476c0-0.431-0.04-0.925-0.119-1.156c-0.075-0.223-0.202-0.395-0.389-0.528 c-0.181-0.128-0.419-0.195-0.706-0.195c-0.233,0-0.441,0.054-0.618,0.163s-0.3,0.262-0.378,0.469 c-0.082,0.215-0.125,0.521-0.125,1.064v1.345c0,0.173,0.02,0.429,0.056,0.597c0.036,0.162,0.101,0.312,0.193,0.447 	c0.087,0.127,0.214,0.23,0.374,0.305c0.164,0.076,0.358,0.115,0.576,0.115c0.223,0,0.409-0.039,0.551-0.113 c0.142-0.075,0.26-0.19,0.354-0.342c0.098-0.158,0.161-0.309,0.187-0.445c0.028-0.143,0.042-0.355,0.042-0.631v-0.205h-0.796v0.472 c0,0.25-0.017,0.413-0.052,0.511c-0.049,0.133-0.162,0.211-0.309,0.211c-0.129,0-0.229-0.064-0.274-0.179 c-0.022-0.054-0.047-0.151-0.047-0.452v-0.838v-0.138h0.002L13.272,12.702z M13.272,12.087v-0.495c0-0.364,0.019-0.309,0.035-0.358 c0.038-0.117,0.141-0.186,0.284-0.186c0.128,0,0.226,0.075,0.265,0.203c0.016,0.052,0.036,0.002,0.036,0.341v0.495v0.139h-0.143 h-0.333h-0.143C13.273,12.226,13.272,12.087,13.272,12.087z"/></g>
+            </svg>
+          </a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link">&#xf16d;</a>
+          <a href="#" class="social__link">
+            <svg class="social__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="510px" height="510px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
+	            <g id="post-instagram"><path d="M459,0H51C22.95,0,0,22.95,0,51v408c0,28.05,22.95,51,51,51h408c28.05,0,51-22.95,51-51V51C510,22.95,487.05,0,459,0z M255,153c56.1,0,102,45.9,102,102c0,56.1-45.9,102-102,102c-56.1,0-102-45.9-102-102C153,198.9,198.9,153,255,153z M63.75,459 C56.1,459,51,453.9,51,446.25V229.5h53.55C102,237.15,102,247.35,102,255c0,84.15,68.85,153,153,153c84.15,0,153-68.85,153-153 c0-7.65,0-17.85-2.55-25.5H459v216.75c0,7.65-5.1,12.75-12.75,12.75H63.75z M459,114.75c0,7.65-5.1,12.75-12.75,12.75h-51c-7.65,0-12.75-5.1-12.75-12.75v-51c0-7.65,5.1-12.75,12.75-12.75h51C453.9,51,459,56.1,459,63.75V114.75z"/></g>
+            </svg>
+          </a>
         </li>
       </ul>
     </div>
   </footer>
   
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <!--  <script src="js/script.js"></script>-->
+
+<!-- Slider -->
+  <script>        
+    var swiper = new Swiper(".swiper-container", {
+      pagination: ".swiper-pagination",
+      paginationClickable: true,
+    });
+  </script>
+  
+<!-- Calender -->
+  <script>
+    $(function() {
+      $(".booking__date").datepicker();
+    });
+  </script>
 </body>
 </html>
