--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <input class="booking__date" name="come" type="text" placeholder="Дата отбытия" required>
           </div>
           <select name="night" id="night" class="booking__select" required>
-            <option disabled selected>Количество ночей</option>
+            <option value="" disabled selected>Количество ночей</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
           <select name="guest" id="guest" class="booking__select" required>
-            <option disabled selected>Количество гостей</option>
+            <option value="" disabled selected>Количество гостей</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -126,38 +126,50 @@
     <section class="benefits wrapper">
       <ul class="benefits__list">
         <li class="benefits__item">
-          <svg class="benefits__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-            <g><path d="M974,581.3C959.7,479.1,829.1,474,829.1,474c0-32.7-43.5-51.9-43.5-51.9h-625c-40.2,0-46.1,56.1-46.1,56.1c8.4,315,198.5,418.9,198.5,418.9h327.5c46.9-34.3,111.4-134,111.4-134c10.1,3.4,79.6-0.9,107.2-6.7C886.7,750.5,988.2,683.4,974,581.3z M339.8,842.7C180.7,727.1,196.6,483.3,196.6,483.3h88C236,621.5,332.3,795.8,345.7,820C359.1,844.3,339.8,842.7,339.8,842.7z M851.6,699.4c-41.1,24.4-71.3,8.4-71.3,8.4c42.7-59.5,46.1-174.2,46.1-174.2c7.5,2.5,13.4-28.5,67.1,26C947.1,613.9,892.7,675.1,851.6,699.4z"/><path d="M90.3,990h738.4c36.3,0,65.7-31,65.7-69.4H24.7C24.7,959,54,990,90.3,990z"/><path d="M324.6,82c0,0-130.6,79.7-48.6,154.1c82,74.5,74.5,102.2,26.8,167.6c0,0,89.6-45.2,77.8-114c-11.8-68.7-98-103-79.6-150.7C319.7,91.3,324.6,82,324.6,82z"/><path d="M612.9,40.2c0,0-130.7,79.7-48.5,154.1c82,74.5,74.4,102.2,26.7,167.6c0,0,89.7-45.2,77.9-114c-11.7-68.7-98-103-79.7-150.7C607.9,49.4,612.9,40.2,612.9,40.2z"/><path d="M477.2,10c0,0-81.3,6.7-96.4,85.5c-15,78.8,36,108.1,75.4,147.5c39.3,39.3,22.6,113-21.8,165.1c0,0,79.6-27.7,98-103.9c18.4-76.3-19-103.1-57.7-147.4C435.8,112.3,439.4,31.8,477.2,10z"/></g>
-          </svg>
-          <h3 class="benefits__title">Лечебный курорт</h3>
-          <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="benefits__block">
+            <a href="#" class="benefits__link">
+              <svg class="benefits__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+              <g><path d="M974,581.3C959.7,479.1,829.1,474,829.1,474c0-32.7-43.5-51.9-43.5-51.9h-625c-40.2,0-46.1,56.1-46.1,56.1c8.4,315,198.5,418.9,198.5,418.9h327.5c46.9-34.3,111.4-134,111.4-134c10.1,3.4,79.6-0.9,107.2-6.7C886.7,750.5,988.2,683.4,974,581.3z M339.8,842.7C180.7,727.1,196.6,483.3,196.6,483.3h88C236,621.5,332.3,795.8,345.7,820C359.1,844.3,339.8,842.7,339.8,842.7z M851.6,699.4c-41.1,24.4-71.3,8.4-71.3,8.4c42.7-59.5,46.1-174.2,46.1-174.2c7.5,2.5,13.4-28.5,67.1,26C947.1,613.9,892.7,675.1,851.6,699.4z"/><path d="M90.3,990h738.4c36.3,0,65.7-31,65.7-69.4H24.7C24.7,959,54,990,90.3,990z"/><path d="M324.6,82c0,0-130.6,79.7-48.6,154.1c82,74.5,74.5,102.2,26.8,167.6c0,0,89.6-45.2,77.8-114c-11.8-68.7-98-103-79.6-150.7C319.7,91.3,324.6,82,324.6,82z"/><path d="M612.9,40.2c0,0-130.7,79.7-48.5,154.1c82,74.5,74.4,102.2,26.7,167.6c0,0,89.7-45.2,77.9-114c-11.7-68.7-98-103-79.7-150.7C607.9,49.4,612.9,40.2,612.9,40.2z"/><path d="M477.2,10c0,0-81.3,6.7-96.4,85.5c-15,78.8,36,108.1,75.4,147.5c39.3,39.3,22.6,113-21.8,165.1c0,0,79.6-27.7,98-103.9c18.4-76.3-19-103.1-57.7-147.4C435.8,112.3,439.4,31.8,477.2,10z"/></g>
+            </svg>
+              <h3 class="benefits__title">Лечебный курорт</h3>
+            </a>
+            <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
         </li>
         <li class="benefits__item">
-          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 89.471 89.471" style="enable-background:new 0 0 89.471 89.471;" xml:space="preserve">
-            <g><path style="fill:#010002;" d="M87.682,52.477h-15.36l-1.174-26.841c0-0.741-0.601-1.342-1.342-1.342 c-0.744,0-1.342,0.601-1.342,1.342L67.29,52.477h-65.5C0.805,52.477,0,53.286,0,54.266v14.315c0,0.981,0.805,1.789,1.789,1.789 h5.368v2.684h10.737v-2.684h53.794v2.684h10.737v-2.684h5.257c0.984,0,1.789-0.809,1.789-1.789V54.266 C89.471,53.286,88.666,52.477,87.682,52.477z M59.312,63.915c-1.381,0-2.494-1.117-2.494-2.491c0-1.381,1.117-2.494,2.494-2.494 c1.374,0,2.491,1.117,2.491,2.494C61.807,62.802,60.687,63.915,59.312,63.915z M65.965,63.915c-1.385,0-2.494-1.117-2.494-2.491 c0-1.381,1.117-2.494,2.494-2.494c1.378,0,2.487,1.117,2.487,2.494C68.453,62.802,67.34,63.915,65.965,63.915z M72.608,63.915 c-1.374,0-2.494-1.117-2.494-2.491c0-1.381,1.12-2.494,2.494-2.494c1.378,0,2.491,1.117,2.491,2.494 C75.099,62.802,73.986,63.915,72.608,63.915z M79.257,63.915c-1.381,0-2.494-1.117-2.494-2.491c0-1.381,1.117-2.494,2.494-2.494 c1.371,0,2.491,1.117,2.491,2.494C81.752,62.802,80.628,63.915,79.257,63.915z"/></g>
-            <g><path style="fill:#010002;" d="M61.939,33.258c-2.201-1.993-3.471-4.839-3.471-7.809s1.267-5.816,3.479-7.809l-1.109-1.224 c-2.552,2.305-4.015,5.594-4.015,9.029c0,3.432,1.46,6.728,4.015,9.029L61.939,33.258z"/></g>
-            <g><path style="fill:#010002;" d="M62.909,32.185l1.106-1.224c-1.557-1.41-2.448-3.414-2.448-5.511c0-2.094,0.891-4.105,2.448-5.511 l-1.106-1.224c-1.904,1.714-2.992,4.173-2.992,6.735C59.917,28.012,61.005,30.463,62.909,32.185z"/></g>
-            <g><path style="fill:#010002;" d="M65.117,29.733l1.109-1.224c-1.729-1.56-1.729-4.559,0-6.12l-1.109-1.224 c-1.21,1.095-1.9,2.656-1.9,4.287C63.217,27.078,63.908,28.642,65.117,29.733z"/></g>
-            <g><path style="fill:#010002;" d="M77.672,33.258l1.102,1.22c2.555-2.301,4.015-5.594,4.015-9.029s-1.46-6.725-4.015-9.029 l-1.106,1.224c2.205,1.99,3.471,4.839,3.471,7.809C81.14,28.42,79.873,31.265,77.672,33.258z"/></g>
-            <g><path style="fill:#010002;" d="M75.596,30.961l1.106,1.224c1.9-1.721,2.992-4.173,2.992-6.735s-1.092-5.018-2.992-6.735 l-1.106,1.224c1.56,1.406,2.448,3.418,2.448,5.511C78.044,27.546,77.156,29.551,75.596,30.961z"/></g>
-            <g><path style="fill:#010002;" d="M74.49,29.733c1.21-1.088,1.9-2.656,1.9-4.284c0-1.632-0.691-3.192-1.9-4.287l-1.109,1.224 c1.732,1.56,1.732,4.559,0,6.12L74.49,29.733z"/></g>
-          </svg>
-          <h3 class="benefits__title">Бесплатный вай-фай</h3>
-          <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="benefits__block">
+            <a href="#" class="benefits__link">
+              <svg class="benefits__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 89.471 89.471" style="enable-background:new 0 0 89.471 89.471;" xml:space="preserve">
+                <g><path d="M87.682,52.477h-15.36l-1.174-26.841c0-0.741-0.601-1.342-1.342-1.342 c-0.744,0-1.342,0.601-1.342,1.342L67.29,52.477h-65.5C0.805,52.477,0,53.286,0,54.266v14.315c0,0.981,0.805,1.789,1.789,1.789 h5.368v2.684h10.737v-2.684h53.794v2.684h10.737v-2.684h5.257c0.984,0,1.789-0.809,1.789-1.789V54.266 C89.471,53.286,88.666,52.477,87.682,52.477z M59.312,63.915c-1.381,0-2.494-1.117-2.494-2.491c0-1.381,1.117-2.494,2.494-2.494 c1.374,0,2.491,1.117,2.491,2.494C61.807,62.802,60.687,63.915,59.312,63.915z M65.965,63.915c-1.385,0-2.494-1.117-2.494-2.491 c0-1.381,1.117-2.494,2.494-2.494c1.378,0,2.487,1.117,2.487,2.494C68.453,62.802,67.34,63.915,65.965,63.915z M72.608,63.915 c-1.374,0-2.494-1.117-2.494-2.491c0-1.381,1.12-2.494,2.494-2.494c1.378,0,2.491,1.117,2.491,2.494 C75.099,62.802,73.986,63.915,72.608,63.915z M79.257,63.915c-1.381,0-2.494-1.117-2.494-2.491c0-1.381,1.117-2.494,2.494-2.494 c1.371,0,2.491,1.117,2.491,2.494C81.752,62.802,80.628,63.915,79.257,63.915z"/></g>
+                <g><path d="M61.939,33.258c-2.201-1.993-3.471-4.839-3.471-7.809s1.267-5.816,3.479-7.809l-1.109-1.224 c-2.552,2.305-4.015,5.594-4.015,9.029c0,3.432,1.46,6.728,4.015,9.029L61.939,33.258z"/></g>
+                <g><path d="M62.909,32.185l1.106-1.224c-1.557-1.41-2.448-3.414-2.448-5.511c0-2.094,0.891-4.105,2.448-5.511 l-1.106-1.224c-1.904,1.714-2.992,4.173-2.992,6.735C59.917,28.012,61.005,30.463,62.909,32.185z"/></g>
+                <g><path d="M65.117,29.733l1.109-1.224c-1.729-1.56-1.729-4.559,0-6.12l-1.109-1.224 c-1.21,1.095-1.9,2.656-1.9,4.287C63.217,27.078,63.908,28.642,65.117,29.733z"/></g>
+                <g><path d="M77.672,33.258l1.102,1.22c2.555-2.301,4.015-5.594,4.015-9.029s-1.46-6.725-4.015-9.029 l-1.106,1.224c2.205,1.99,3.471,4.839,3.471,7.809C81.14,28.42,79.873,31.265,77.672,33.258z"/></g>
+                <g><path d="M75.596,30.961l1.106,1.224c1.9-1.721,2.992-4.173,2.992-6.735s-1.092-5.018-2.992-6.735 l-1.106,1.224c1.56,1.406,2.448,3.418,2.448,5.511C78.044,27.546,77.156,29.551,75.596,30.961z"/></g>
+                <g><path d="M74.49,29.733c1.21-1.088,1.9-2.656,1.9-4.284c0-1.632-0.691-3.192-1.9-4.287l-1.109,1.224 c1.732,1.56,1.732,4.559,0,6.12L74.49,29.733z"/></g>
+              </svg>
+              <h3 class="benefits__title">Бесплатный вай-фай</h3>
+            </a>
+            <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
         </li>
         <li class="benefits__item">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve">
-            <polygon points="6.375,50 2,50 7.056,76 7,76 7,96 11,96 11,77 26,77 26,96 30,96 30,77 30,76 30,74 11.625,74 "/><polygon points="99,50 94.625,50 89.375,74 71,74 71,76 71,77 71,96 75,96 75,77 90,77 90,96 94,96 94,76 93.944,76 "/><path d="M61.278,53c0.018,0,0.037-0.462,0.037-0.711c0-5.012-3.576-9.176-8.315-10.105V40h-3v2.037  c-5.228,0.501-9.316,4.886-9.316,10.245c0,0.249,0.02,0.718,0.037,0.718H61.278z"/><rect x="37" y="54" width="29" height="2"/><path d="M19,45l0.006,0.053C19.007,45.021,19.008,45,19.009,45H19z"/><path d="M84.138,45c0.001,0,0.001,0.021,0.003,0.053L84.146,45H84.138z"/><path d="M86.772,57H15.227C13.445,57,12,57.5,12,58.117v0.766C12,59.5,13.445,60,15.227,60H38v36h26V60h22.772  C88.555,60,90,59.5,90,58.883v-0.766C90,57.5,88.555,57,86.772,57z"/><path d="M24.6,56h-2.08l0.202-6.149c2.07-0.243,3.678-1.926,3.678-3.928c0-0.18-2.1-6.923-2.1-6.923h-4.2c0,0-2.1,6.509-2.1,6.873  c0,2.002,1.608,3.736,3.679,3.979L21.88,56H19.8c-0.332,0-0.6,0.168-0.6,0.5s0.268,0.5,0.6,0.5h2.12h0.56h2.12  c0.332,0,0.6-0.168,0.6-0.5S24.932,56,24.6,56z M20.482,40h3.436c0,0,0.642,2,1.142,4h-5.741C19.822,42,20.482,40,20.482,40z"/><path d="M82.6,56h-2.08l0.202-6.149c2.069-0.243,3.679-1.926,3.679-3.928C84.4,45.743,82.3,39,82.3,39h-4.2c0,0-2.1,6.509-2.1,6.873  c0,2.002,1.608,3.736,3.679,3.979L79.88,56H77.8c-0.331,0-0.6,0.168-0.6,0.5s0.269,0.5,0.6,0.5h2.12h0.561H82.6  c0.332,0,0.601-0.168,0.601-0.5S82.932,56,82.6,56z M78.482,40h3.436c0,0,0.643,2,1.143,4h-5.742C77.822,42,78.482,40,78.482,40z"/>
-          </svg>
-          <h3 class="benefits__title">Ресторан</h3>
-          <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="benefits__block">
+            <a href="#" class="benefits__link">
+              <svg class="benefits__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve">
+                <polygon points="6.375,50 2,50 7.056,76 7,76 7,96 11,96 11,77 26,77 26,96 30,96 30,77 30,76 30,74 11.625,74 "/><polygon points="99,50 94.625,50 89.375,74 71,74 71,76 71,77 71,96 75,96 75,77 90,77 90,96 94,96 94,76 93.944,76 "/><path d="M61.278,53c0.018,0,0.037-0.462,0.037-0.711c0-5.012-3.576-9.176-8.315-10.105V40h-3v2.037  c-5.228,0.501-9.316,4.886-9.316,10.245c0,0.249,0.02,0.718,0.037,0.718H61.278z"/><rect x="37" y="54" width="29" height="2"/><path d="M19,45l0.006,0.053C19.007,45.021,19.008,45,19.009,45H19z"/><path d="M84.138,45c0.001,0,0.001,0.021,0.003,0.053L84.146,45H84.138z"/><path d="M86.772,57H15.227C13.445,57,12,57.5,12,58.117v0.766C12,59.5,13.445,60,15.227,60H38v36h26V60h22.772  C88.555,60,90,59.5,90,58.883v-0.766C90,57.5,88.555,57,86.772,57z"/><path d="M24.6,56h-2.08l0.202-6.149c2.07-0.243,3.678-1.926,3.678-3.928c0-0.18-2.1-6.923-2.1-6.923h-4.2c0,0-2.1,6.509-2.1,6.873  c0,2.002,1.608,3.736,3.679,3.979L21.88,56H19.8c-0.332,0-0.6,0.168-0.6,0.5s0.268,0.5,0.6,0.5h2.12h0.56h2.12  c0.332,0,0.6-0.168,0.6-0.5S24.932,56,24.6,56z M20.482,40h3.436c0,0,0.642,2,1.142,4h-5.741C19.822,42,20.482,40,20.482,40z"/><path d="M82.6,56h-2.08l0.202-6.149c2.069-0.243,3.679-1.926,3.679-3.928C84.4,45.743,82.3,39,82.3,39h-4.2c0,0-2.1,6.509-2.1,6.873  c0,2.002,1.608,3.736,3.679,3.979L79.88,56H77.8c-0.331,0-0.6,0.168-0.6,0.5s0.269,0.5,0.6,0.5h2.12h0.561H82.6  c0.332,0,0.601-0.168,0.601-0.5S82.932,56,82.6,56z M78.482,40h3.436c0,0,0.643,2,1.143,4h-5.742C77.822,42,78.482,40,78.482,40z"/>
+              </svg>
+              <h3 class="benefits__title">Ресторан</h3>
+            </a>
+            <p class="benefits__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
         </li>
       </ul>
     </section>
     
     <section class="discount">
       <div class="discount__wrap wrapper">
-        <h2 class="discount__title">Сегодня <span>25% скидка</span> на гостиничный номе или любые другие события...</h2>
+        <h2 class="discount__title">Сегодня <span>25% скидка</span> на гостиничный номер или любые другие события...</h2>
         <button type="button" class="btn">Забронируйте сейчас!</button>
       </div>
     </section>
